--- a/tut/tut/tut.csproj
+++ b/tut/tut/tut.csproj
@@ -46,6 +46,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="connorsForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="connorsForm.Designer.cs">
+      <DependentUpon>connorsForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
